Fixed BUG#17015: Routine name truncation not an error   The name length was checked "the old way", not taking charsets into account,   when creating a stored routine.   Fixing this enforces the real limit (64 characters) again, and no truncation   is possible.

mysql-test/r/sp-error.result:
  Updated results for BUG#17015.
mysql-test/t/sp-error.test:
  Added and modified test case for BUG#17015 (and 9529).
sql/sp.cc:
  When creating a routine, check the length of the name the correct way,
  taking the charsets into account.